tests/core/snapshots/batching-post-requests.md_merged.snap
---
source: tests/core/spec.rs
expression: formatter
---
schema @server(port: 8000) @upstream(httpCache: 42) {
  query: Query
}

type Post {
  body: String!
  id: Int!
  title: String!
  userId: Int!
}

type Query {
  user: User @http(url: "http://jsonplaceholder.typicode.com/users/1")
  users: [User] @http(url: "http://jsonplaceholder.typicode.com/users")
}

type User {
  email: String!
  id: Int!
  name: String!
  post: Post
    @http(
      url: "http://jsonplaceholder.typicode.com/posts"
      body: [{userId: "{{.value.id}}", title: "{{.value.name}}", body: "{{.value.email}}"}]
      batchKey: ["id"]
      method: "POST"
    )
}
