tests/core/snapshots/batching-post.md_merged.snap
---
source: tests/core/spec.rs
expression: formatter
snapshot_kind: text
---
schema
  @server(port: 8000, queryValidation: false)
  @upstream(batch: {delay: 1, headers: [], maxSize: 1000}, httpCache: 42) {
  query: Query
}

type Post {
  body: String
  id: Int
  title: String
  user: User @http(url: "http://jsonplaceholder.typicode.com/users/{{.value.userId}}")
  userId: Int!
}

type Query {
  posts: [Post] @http(url: "http://jsonplaceholder.typicode.com/posts?id=1")
}

type User {
  id: Int
  name: String
}
