tests/core/snapshots/batching-validation-errors.md_error.snap
---
source: tests/core/spec.rs
expression: errors
---
[
  {
    "message": "batchKey is incompatible with list type resolvers",
    "trace": [
      "Query",
      "userByUserIds",
      "@http",
      "batchKey"
    ],
    "description": null
  }
]
