tests/core/snapshots/batching.md_0.snap
---
source: tests/core/spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": [
    {
      "data": {
        "user": {
          "id": 1
        }
      }
    },
    {
      "data": {
        "user": {
          "name": "foo"
        }
      }
    }
  ]
}
